# bio-data-harmoniser

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh
backend/: .gitignore  README.md  pyproject.toml
backend/bio_data_harmoniser/api/: app.py  cli.py
backend/bio_data_harmoniser/api/airflow/: dags.py  interface.py
backend/bio_data_harmoniser/core/: data_types.py  llms.py  logging.py  ontology.py  settings.py  utils.py
backend/bio_data_harmoniser/core/extraction/: links.py  pages.py  rag.py
backend/bio_data_harmoniser/core/io/: __init__.py  core.py
backend/bio_data_harmoniser/core/io/special/: vcf.py
backend/bio_data_harmoniser/core/normalisation/: base.py  entity.py
backend/bio_data_harmoniser/core/schemas/: __init__.py  base.py  gwas.py  other.py  rna_seq.py
backend/bio_data_harmoniser/ingestion/: __init__.py  ontology.py  pubmed.py
backend/data/: .gitignore
backend/scripts/: setup-airflow.sh  start-postgres.sh  start-redis.sh
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  loading.tsx
frontend/src/app/dashboard/data-model/: page.tsx
frontend/src/app/dashboard/data-model/create/: page.tsx
frontend/src/app/dashboard/ingestion/: page.tsx
frontend/src/app/dashboard/ingestion/[id]/: layout.tsx
frontend/src/app/dashboard/ingestion/[id]/mapping/: page.tsx
frontend/src/app/dashboard/ingestion/[id]/sql/: page.tsx
frontend/src/app/dashboard/ingestion/[id]/tasks/: page.tsx
frontend/src/app/dashboard/ingestion/create/: page.tsx
frontend/src/components/: badge.tsx  create_schema.tsx  dag.tsx  dropdown.tsx  editor.tsx  ingestion_dashboard.tsx  link.tsx  mapping_table.tsx  node.tsx  shell.tsx  sql_query.tsx  tabs.tsx  toast.tsx
frontend/src/lib/: endpoints.ts  mapping_table.ts  secrets.ts  server_funcs.ts  sql.ts  utils.ts
